# bita

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  flake.nix  generate-data.py  locust.conf  locust_helpers.py  locustfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bita/: __init__.py  application.py  domain.py  dtos.py
bita/domain/: __init__.py  calendar_rules.py  filters.py  weighting.py
tests/: test_application.py  test_backtest.py  test_domain.py  test_endpoint.py  test_services.py
